--- a/SimplyTotalCommander/App.xaml
+++ b/SimplyTotalCommander/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:SimplyTotalCommander"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-
+        <FontFamily x:Key="RexBold">pack://aplication:,,,Fonts/Rex/#Rex Bold</FontFamily> 
+        <FontFamily x:Key="RexBoldInline">pack://aplication:,,,Fonts/Rex/#Rex BoldInline</FontFamily> 
+        <FontFamily x:Key="RexLight">pack://aplication:,,,Fonts/Rex/#Rex Light</FontFamily> 
     </Application.Resources>
 </Application>
