--- a/SimplyTotalCommander/MainWindow.xaml
+++ b/SimplyTotalCommander/MainWindow.xaml
@@ -9,6 +9,8 @@
         Background="GhostWhite"
         Height="850"
         Width="800"
+        BorderBrush="Peru"
+        BorderThickness="10,10,10,10"
         >
     <Grid>
         <Grid.ColumnDefinitions>
