--- a/SimplyTotalCommander/MainWindow.xaml
+++ b/SimplyTotalCommander/MainWindow.xaml
@@ -6,30 +6,20 @@
         xmlns:local="clr-namespace:SimplyTotalCommander"
         mc:Ignorable="d"
         Title="Hutnik Commander"
-        Background="GhostWhite"
         Height="850"
         Width="800"
-        BorderBrush="Peru"
-        BorderThickness="10,10,10,10"
-        
+        Foreground="GhostWhite"
         >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition
                 Width="50*"/>
             <ColumnDefinition
-                Width="10*"/>
+                Width="0.3*"/>
             <ColumnDefinition
                 Width="50*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel  HorizontalAlignment="Center" Grid.Column="1" Orientation="Vertical" Margin="0,100,30,20">
-            <Button Height="33" Width="50" Click="Button_Click_1" >Check all</Button>
-            <Button Height="33" Width="50" Click="Button_Click_2" >Paste</Button>
-            <Button Height="33" Width="50" Click="Button_Click_3" >Cut</Button>
-            <Button Height="33" Width="50" Click="Button_Click_4" >Delete</Button>
-            <Button Height="33" Width="50" Click="Button_Click_5" >Unzip</Button>
-            <Button Height="33" Width="50" Click="Button_Click_6" >To Zip</Button>
-        </StackPanel>
+
         <local:WindowControl
             Grid.Column="0" Loaded="WindowControl_Loaded" MouseRightButtonUp="WindowControl_MouseRightButtonUp"/>
         <local:WindowControl
