--- a/SimplyTotalCommander/MainWindow.xaml
+++ b/SimplyTotalCommander/MainWindow.xaml
@@ -9,6 +9,7 @@
         Height="850"
         Width="800"
         Foreground="GhostWhite"
+        WindowStyle="ToolWindow"
         >
     <Grid>
         <Grid.ColumnDefinitions>
