fix events in filereader

--- a/SimplyTotalCommander/MainWindow.xaml
+++ b/SimplyTotalCommander/MainWindow.xaml
@@ -10,6 +10,7 @@
         Width="800"
         Foreground="GhostWhite"
         WindowStyle="ToolWindow"
+        WindowState="Maximized"
         >
     <Grid>
         <Grid.ColumnDefinitions>
