--- a/SimplyTotalCommander/PropertiesWindow.xaml
+++ b/SimplyTotalCommander/PropertiesWindow.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:SimplyTotalCommander"
         mc:Ignorable="d"
         WindowStyle="ToolWindow"
+        WindowStartupLocation="CenterScreen"
         Foreground="GhostWhite"
-        FontFamily="{StaticResource RexBold}"
-        FontSize="20"
-        Title="PropertiesWindow" Height="380" Width="600">
+        FontFamily="{StaticResource RexBold}" FontSize="20"
+        Title="Properties of File" Height="380" Width="800">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="mainBackground.png"/>
@@ -20,27 +20,27 @@
                 <TextBlock Text="{Binding fileName}" Margin="10,5"></TextBlock>
             </WrapPanel>
             <WrapPanel>
-                <TextBlock Margin="0,5,10,0" Text="Extension :"></TextBlock>
+                <TextBlock Margin="0,5,50,0" Text="Extension :"></TextBlock>
                 <TextBlock Text="{Binding extension}" Margin="0,5"></TextBlock>
             </WrapPanel>
             <WrapPanel>
-                <TextBlock Margin="0,5,10,0" Text="File Size :"></TextBlock>
+                <TextBlock Margin="0,5,65,0" Text="File Size :"></TextBlock>
                 <TextBlock Text="{Binding length}" Margin="0,5"></TextBlock>
             </WrapPanel>
             <WrapPanel>
-                <TextBlock Margin="0,5,10,0"  Text="Path :"></TextBlock>
+                <TextBlock Margin="0,5,95,0"  Text="Path :"></TextBlock>
                 <TextBlock Text="{Binding path}" Margin="0,5"></TextBlock>
             </WrapPanel>
             <WrapPanel>
-                <TextBlock Margin="0,5,10,0"  Text="Directory name :"></TextBlock>
+                <TextBlock Margin="0,5,7,0"  Text="Directory name :"></TextBlock>
                 <TextBlock Text="{Binding directoryName}" Margin="0,5"></TextBlock>
             </WrapPanel>
             <WrapPanel>
-                <TextBlock Margin="0,5,10,0" Text="Is read only :"></TextBlock>
+                <TextBlock Margin="0,5,35,0" Text="Is read only :"></TextBlock>
                 <TextBlock Text="{Binding isReadOnly}" Margin="0,5"></TextBlock>
             </WrapPanel>
             <WrapPanel>
-                <TextBlock Margin="0,5,10,0" Text="Creation time :"></TextBlock>
+                <TextBlock Margin="0,5,25,0" Text="Creation time :"></TextBlock>
                 <TextBlock Text="{Binding creationTime}" Margin="0,5"></TextBlock>
             </WrapPanel>
             <WrapPanel>
