fixed grid style

--- a/SimplyTotalCommander/WindowControl.xaml
+++ b/SimplyTotalCommander/WindowControl.xaml
@@ -54,6 +54,8 @@
                   HorizontalAlignment="Stretch"
                   AutoGenerateColumns="False" 
                   SelectionUnit="FullRow"
+                  CanUserResizeColumns="False"
+                  CanUserResizeRows="False"
                   SelectionChanged="DataGridOfFiles_SelectionChanged"
                   GridLinesVisibility="None"
                   Width="460"
@@ -71,6 +73,7 @@
                             <Trigger Property="IsKeyboardFocusWithin" Value="true">
                                 <Setter Property="AlternatingRowBackground" Value="DarkGray" />
                                 <Setter Property="BorderThickness" Value="3" />
+                                <Setter Property="BorderBrush" Value="AntiqueWhite" />
                             </Trigger>
                             <Trigger Property="IsKeyboardFocusWithin" Value="false">
                                 <Setter Property="AlternatingRowBackground" Value="Gainsboro"/>
