--- a/SimplyTotalCommander/MainWindow.xaml
+++ b/SimplyTotalCommander/MainWindow.xaml
@@ -12,12 +12,13 @@
         WindowStyle="ToolWindow"
         WindowState="Maximized"
         >
+
+    
+    
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition
-                Width="50*"/>
-            <ColumnDefinition
-                Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
         </Grid.ColumnDefinitions>
 
         <local:WindowControl
@@ -28,7 +29,9 @@
             />
         <local:WindowControl
             x:Name="RightWindow"
+
             Grid.Column="2"/>
-        
     </Grid>
+
+      
 </Window>
